# Data-Engineering-ZoomCamp

./: .gitignore  README.md  bootstrap.sh  duckdb.db  pyproject.toml
01.docker-terraform/: .gitignore  README.md  summary_01.md
01.docker-terraform/pipeline/: docker-compose.yaml  notebook.ipynb
02.workflow-orchestration/: docker-compose.yml  summary_02.md
02.workflow-orchestration/Homework/: green_taxi_dataset.yaml  postgres_taxi_scheduled.yaml
02.workflow-orchestration/flows/: postgres_taxi.yaml
02.workflow-orchestration/scripts/: ingestion_pipeline.py
03.data-warehouse/: .gitignore  assignment.sql  homework.md  load_taxi.py  summary_03.md
03.data-warehouse/HomeWork/: assignment.sql
04.analytics-engineering/: .gitignore  homework.md  ingestion_script.py  summary_04.md  taxi_rides_ny.duckdb.wal
04.analytics-engineering/gcp infrastructure/: load-fhv-taxi.sh  load-green-taxi.sh  verify-setup.sh
04.analytics-engineering/gcp_infrastructure/: load-fhv-taxi.sh  load-green-taxi.sh  load-yellow-taxi.sh
04.analytics-engineering/taxi_rides_ny/: .gitignore  check_duckdb.py  dbt_project.yml  file_size_estimator.py  (+1 more)
06.batch/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  06_spark_sql_big_query.py  07_groupby_join.ipynb  08_rdds.ipynb  09_spark_gcs.ipynb  README.md  download_data.sh  pyproject.toml  summary_06.md
07.streaming/: readme.md
data-platform.05/: summary_05.md
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py
workshop/: homework.md  summary.md  sync_workflow.md
(+39 files in other folders)
